adding a new visualizer, made some improvments to the other visualizers, added linting

--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
           <option> waveform </option>
           <option> starfield </option>
           <option> pixels </option>
+          <option> circular-cubes </option>
         </select>
       </div>
       <div id='toggleRecording'>
