adding a blob visualizer

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
           <option> starfield </option>
           <option> pixels </option>
           <option> circular-cubes </option>
+          <option> blob </option>
         </select>
       </div>
       <div id='toggleRecording'>
