working on a new visualizer that features a bunch of spheres and should sync audio data to brightness of the spheres

--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
           <option> blob </option>
           <option> spheres </option>
           <option> waves </option>
+          <option> lights </option>
         </select>
       </div>
       <div id='toggleRecording'>
