add new orbits visualizer

--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@
           <option> spheres </option>
           <option> waves </option>
           <option> lights </option>
+          <option> orbits </option>
         </select>
       </div>
       <div id='toggleRecording'>
