working on a visualizer option to allow showing a static image

--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
           <option> waves </option>
           <option> lights </option>
           <option> orbits </option>
+          <option> image </option>
         </select>
       </div>
       <div id='toggleRecording'>
