got it working :D

--- a/index.html
+++ b/index.html
@@ -237,6 +237,10 @@
           </select>
         </div>
         
+        <!-- allow user to import an image to be used as texture -->
+        <button id='importImage'> import image as texture </button>
+        <button id='removeImage'> clear texture </button>
+        
         <!-- lighting controls -->
         <div class='lightingControl'>
           <p id='lightingControlHeader'> light controls </p>
