--- a/index.html
+++ b/index.html
@@ -166,8 +166,9 @@
     
     #waveformCanvas {
       border: 1px solid #000;
-      margin: 0 auto;
-      width: 10%;
+      margin: 8px auto;
+      width: 50%;
+      height: 50px;
     }
     
   </style>
