working on a new visualizer :)

--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@
           <option> starfield </option>
           <option> pixels </option>
           <option> circular-cubes </option>
+          <option> spherical-cubes </option>
           <option> blob </option>
           <option> spheres </option>
           <option> waves </option>
