--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
       margin: 0 auto;
     }
     
+    #canvasContainer > canvas {
+      width: 100%;
+      height: 100%;
+    }
+    
     #loadingMsg {
       text-align: center;
       font-weight: bold;
