--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
     .drawer {
       height: 100vh;
       border-right: 1px solid #ddd;
+      border-bottom: 1px solid #ddd;
       background-color: #fff;
       display: none;
       position: absolute;
@@ -280,6 +281,7 @@
         
       </div>
       
+      <hr />
       <p id='visualizerControlHeader'> visualizer controls </p>
       <div id='visualizerSpecificOptions'>
       </div>
@@ -303,6 +305,7 @@
           <option> waves </option>
           <option> lights </option>
           <option> orbits </option>
+          <option> ripples </option>
           <option> image </option>
         </select>
       </div>
