adding reset functionality for certain visualizers

--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
       <button id='importAudio'> import audio </button>
       <input id='fileInput' style='display:none;' type='file' accept='audio/*'>
       <button id='playVisualization'> play </button>
+      <button id='resetVisualization'> reset </button>
       <button id='stopVisualization'> stop </button>
       <div class='visualizerSection'>
         <p> visualizer: </p>
